Add json-server script to fix API connection error

--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+                
+              },
+              "src/favicon.ico",
+            "src/assets",
+            "src/assets/images"
             ],
             "styles": [
               "src/styles.css"
