--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:ShopSphere": "node dist/ShopSphere/server/server.mjs"
+    "serve:ssr:ShopSphere": "node dist/ShopSphere/server/server.mjs",
+    "server": "json-server --watch src/db.json --port 3000"
   },
   "prettier": {
     "printWidth": 100,
@@ -34,6 +35,7 @@
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -43,6 +45,7 @@
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^20.17.19",
+    "@types/xlsx": "^0.0.35",
     "jasmine-core": "~5.9.0",
     "json-server": "^1.0.0-beta.3",
     "karma": "~6.4.0",
